# metabase-python-api-notify

./: README.md  env.sample  metabase-python-api-notify.py  pyproject.toml
