[tool.poetry]
name = "metabase-python-api-notify"
version = "0.1.0"
description = "Example showing how to use the Metabase notify API endpoint with Python"
authors = ["Jacob Joseph <jacob@metabase.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "metabase_python_api_notify"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
